# saka-news-monitor

./: hinata_monitor.py  main.py  pyproject.toml  sakura_monitor.py
src/: news_crawler.py  news_item.py  news_line_bot.py
